Fix row sign color style and add overflow scroll

--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   height: 100vh;
   width: 100vw;
   max-height: 100vh;
@@ -8,7 +8,6 @@ body {
 
 .app__container {
   display: flex;
-  flex: 1;
   flex-direction: column;
   align-items: stretch;
   height: 100vh;
@@ -16,14 +15,15 @@ body {
 }
 
 .app__nav {
+  min-height: 70px;
   max-height: 70px;
   flex: 1;
   overflow-y: hidden;
 }
 
 router-view {
-  display: flex;
-  flex: 1;
+  height: 100%;
+  overflow: hidden;
 }
 
 text-field {
