--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-flow: row nowrap;
   flex: 1;
+  height: 100%;
 }
 
 /**LEFT WINDOW**/
